o.c.archive.sdds.server: removed cs warnings, changed handle method signature to List interface instead of static cast over iterables