@@ -25,7 +25,10 @@
 package org.csstudio.archive.sdds.server.conversion.handler;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+
+import javax.annotation.Nonnull;
 
 import org.csstudio.archive.sdds.server.command.header.DataRequestHeader;
 import org.csstudio.archive.sdds.server.data.EpicsRecordData;
@@ -58,13 +61,15 @@ public class NoFilterHandler extends AbstractAlgorithmHandler {
      * @see org.csstudio.archive.sdds.server.conversion.handler.AbstractAlgorithmHandler#handle(org.csstudio.archive.sdds.server.command.header.DataRequestHeader, org.csstudio.archive.sdds.server.data.EpicsRecordData[])
      */
     @Override
-    public Iterable<EpicsRecordData> handle(final DataRequestHeader header, final EpicsRecordData[] data)
+    @Nonnull
+    public List<EpicsRecordData> handle(@Nonnull final DataRequestHeader header,
+                                        @Nonnull final EpicsRecordData[] data)
     throws DataException, AlgorithmHandlerException, MethodNotImplementedException {
 
         if (data == null) {
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         } else if (data.length == 0){
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         }
 
         final long intervalStart = header.getFromSec();
@@ -76,7 +81,7 @@ public class NoFilterHandler extends AbstractAlgorithmHandler {
             if(element.getTime() >= intervalStart && element.getTime() <= intervalEnd) {
                 newData.add(new EpicsRecordData(element.getTime(), element.getNanoSeconds(),
                                                  element.getStatus(),
-                                                 new Double((Float)element.getValue())));
+                                                 Double.valueOf((Float) element.getValue())));
             }
         }
 
