@@ -28,6 +28,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import javax.annotation.Nonnull;
+
 import org.csstudio.archive.sdds.server.command.header.DataRequestHeader;
 import org.csstudio.archive.sdds.server.data.EpicsRecordData;
 import org.csstudio.archive.sdds.server.util.DataException;
@@ -57,13 +59,15 @@ public class TailRawHandler extends AbstractAlgorithmHandler {
      * @see org.csstudio.archive.sdds.server.conversion.handler.AbstractAlgorithmHandler#handle(org.csstudio.archive.sdds.server.command.header.DataRequestHeader, org.csstudio.archive.sdds.server.data.EpicsRecordData[])
      */
     @Override
-    public Iterable<EpicsRecordData> handle(final DataRequestHeader header, final EpicsRecordData[] data)
+    @Nonnull
+    public List<EpicsRecordData> handle(@Nonnull final DataRequestHeader header,
+                                        @Nonnull final EpicsRecordData[] data)
     throws DataException, AlgorithmHandlerException, MethodNotImplementedException {
 
         if (data == null) {
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         } else if (data.length == 0){
-            return new ArrayList<EpicsRecordData>(0);
+            return Collections.emptyList();
         }
 
         final long intervalStart = header.getFromSec();
@@ -93,7 +97,7 @@ public class TailRawHandler extends AbstractAlgorithmHandler {
                 final EpicsRecordData obj = new EpicsRecordData(data[dataIndex].getTime(),
                                                           data[dataIndex].getNanoSeconds(),
                                                           data[dataIndex].getStatus(),
-                                                          new Double((Float)data[dataIndex].getValue()));
+                                                          Double.valueOf((Float) data[dataIndex].getValue()));
 
                 newData.add(obj);
             }
